Add custom RAG based on Pandas input to match user equipments with the corresponding probs from historical data

--- a/playground/data_loader_experiments.ipynb
+++ b/playground/data_loader_experiments.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -31,8 +31,7 @@
      "output_type": "stream",
      "text": [
       "Mergering file equipment_data_site_1.xlsx\n",
-      "Mergering file equipment_data_site_2.xlsx\n",
-      "file exported as c:/Users/Jonathan_Espinosa/Projects/novartis/system_impact_classification/data\\merged_sites_table.xlsx\n"
+      "Mergering file equipment_data_site_2.xlsx\n"
      ]
     },
     {
@@ -119,15 +118,15 @@
        "1       ABC  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_path = 'c:/Users/Jonathan_Espinosa/Projects/novartis/system_impact_classification/data'\n",
+    "data_path = 'c:/Users/Jonathan_Espinosa/Projects/novartis/system_impact_classification/data_raw'\n",
     "data_merger = DataMerger(data_path)\n",
-    "df_merged = data_merger()\n",
+    "df_merged = data_merger.merge_folder_files()\n",
     "df_merged.head(2)"
    ]
   },
@@ -142,7 +141,7 @@
      "text": [
       "['Boiler' 'Conveyor' 'Furnace' 'Compressor' 'Mixer' 'Pump' 'Generator'\n",
       " 'Chiller' 'Valve' 'Fan' 'Blower' 'Heater' 'Dryer' 'Cooler' 'Turbine'\n",
-      " 'Cooler' 'Turbine' 'Turbaie' 'Turvine']\n"
+      " 'Coolers' 'Turbines']\n"
      ]
     }
    ],
@@ -153,19 +152,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  equipment_group_name                                       equipments\n",
-      "0      Heat Generation                        [Boiler, Furnace, Heater]\n",
-      "1    Material Handling                                [Conveyor, Mixer]\n",
-      "2       Fluid Movement  [Compressor, Pump, Chiller, Valve, Fan, Blower]\n",
-      "3   Drying and Cooling                                  [Dryer, Cooler]\n",
-      "4     Power Generation                             [Generator, Turbine]\n"
+      "  equipment_group_name                      equipments\n",
+      "0              Heating       [Boiler, Furnace, Heater]\n",
+      "1              Cooling               [Chiller, Cooler]\n",
+      "2     Power Generation            [Generator, Turbine]\n",
+      "3    Material Handling  [Conveyor, Mixer, Pump, Valve]\n",
+      "4         Air Handling                   [Fan, Blower]\n",
+      "5               Drying                         [Dryer]\n"
      ]
     }
    ],
@@ -176,16 +176,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Jonathan_Espinosa\\AppData\\Local\\Temp\\ipykernel_28900\\1309078907.py:3: FutureWarning: DataFrame.replace without 'value' and with non-dict-like 'to_replace' is deprecated and will raise in a future version. Explicitly specify the new values instead.\n",
+      "C:\\Users\\Jonathan_Espinosa\\AppData\\Local\\Temp\\ipykernel_13600\\1337473772.py:3: FutureWarning: DataFrame.replace without 'value' and with non-dict-like 'to_replace' is deprecated and will raise in a future version. Explicitly specify the new values instead.\n",
       "  df_merged_renamed = df_merged_renamed.replace()\n",
-      "C:\\Users\\Jonathan_Espinosa\\AppData\\Local\\Temp\\ipykernel_28900\\1309078907.py:6: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\Jonathan_Espinosa\\AppData\\Local\\Temp\\ipykernel_13600\\1337473772.py:6: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df_merged_renamed[cols_bool] = df_merged_renamed[cols_bool].replace(map_answers).astype(int)\n"
      ]
     },
@@ -210,6 +210,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>equipment_group_name</th>\n",
        "      <th>Criteria 1</th>\n",
        "      <th>Criteria 2</th>\n",
        "      <th>Criteria 3</th>\n",
@@ -220,111 +221,109 @@
        "      <th>Criteria 8a</th>\n",
        "      <th>Criteria 8b</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>equipment_group_name</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Drying and Cooling</th>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.333333</td>\n",
+       "      <th>0</th>\n",
+       "      <td>Air Handling</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Fluid Movement</th>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.500000</td>\n",
+       "      <th>1</th>\n",
+       "      <td>Cooling</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Heat Generation</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <th>2</th>\n",
+       "      <td>Drying</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Material Handling</th>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.500000</td>\n",
+       "      <th>3</th>\n",
+       "      <td>Heating</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Power Generation</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <th>4</th>\n",
+       "      <td>Material Handling</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Power Generation</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.75</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                      Criteria 1  Criteria 2  Criteria 3  Criteria 4  \\\n",
-       "equipment_group_name                                                   \n",
-       "Drying and Cooling      0.666667    0.333333    0.666667    0.333333   \n",
-       "Fluid Movement          0.500000    0.500000    0.500000    0.500000   \n",
-       "Heat Generation         1.000000    0.000000    1.000000    0.000000   \n",
-       "Material Handling       0.500000    0.500000    0.500000    0.500000   \n",
-       "Power Generation        0.000000    1.000000    0.000000    1.000000   \n",
+       "  equipment_group_name  Criteria 1  Criteria 2  Criteria 3  Criteria 4  \\\n",
+       "0         Air Handling        0.50        0.50        0.50        0.50   \n",
+       "1              Cooling        1.00        0.00        1.00        0.00   \n",
+       "2               Drying        0.00        1.00        0.00        1.00   \n",
+       "3              Heating        0.75        0.25        0.75        0.25   \n",
+       "4    Material Handling        0.50        0.50        0.50        0.50   \n",
+       "5     Power Generation        0.25        0.75        0.25        0.75   \n",
        "\n",
-       "                      Criteria 5  Criteria 6  Criteria 7  Criteria 8a  \\\n",
-       "equipment_group_name                                                    \n",
-       "Drying and Cooling      0.666667    0.333333    0.666667     0.666667   \n",
-       "Fluid Movement          0.500000    0.500000    0.500000     0.500000   \n",
-       "Heat Generation         1.000000    0.000000    1.000000     1.000000   \n",
-       "Material Handling       0.500000    0.500000    0.500000     0.500000   \n",
-       "Power Generation        0.000000    1.000000    0.000000     0.000000   \n",
-       "\n",
-       "                      Criteria 8b  \n",
-       "equipment_group_name               \n",
-       "Drying and Cooling       0.333333  \n",
-       "Fluid Movement           0.500000  \n",
-       "Heat Generation          0.000000  \n",
-       "Material Handling        0.500000  \n",
-       "Power Generation         1.000000  "
+       "   Criteria 5  Criteria 6  Criteria 7  Criteria 8a  Criteria 8b  \n",
+       "0        0.50        0.50        0.50         0.50         0.50  \n",
+       "1        1.00        0.00        1.00         1.00         0.00  \n",
+       "2        0.00        1.00        0.00         0.00         1.00  \n",
+       "3        0.75        0.25        0.75         0.75         0.25  \n",
+       "4        0.50        0.50        0.50         0.50         0.50  \n",
+       "5        0.25        0.75        0.25         0.25         0.75  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +335,9 @@
     "cols_bool = ['Criteria 1', 'Criteria 2', 'Criteria 3', 'Criteria 4', 'Criteria 5', 'Criteria 6', 'Criteria 7', 'Criteria 8a', 'Criteria 8b']\n",
     "map_answers = {'Yes':1, 'No': 0}\n",
     "df_merged_renamed[cols_bool] = df_merged_renamed[cols_bool].replace(map_answers).astype(int)\n",
-    "df_merged_renamed[cols_bool+['equipment_group_name']].groupby(['equipment_group_name']).mean()"
+    "df_agg_scores = df_merged_renamed[cols_bool+['equipment_group_name']].groupby(['equipment_group_name']).mean()\n",
+    "df_agg_scores = df_agg_scores.reset_index()\n",
+    "df_agg_scores"
    ]
   },
   {
@@ -346,6 +347,155 @@
    "outputs": [],
    "source": [
     "# df_merged[cols_bool+['Equipment Group']].groupby(['Equipment Group']).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>equipment_group_name</th>\n",
+       "      <th>Criteria 1</th>\n",
+       "      <th>Criteria 2</th>\n",
+       "      <th>Criteria 3</th>\n",
+       "      <th>Criteria 4</th>\n",
+       "      <th>Criteria 5</th>\n",
+       "      <th>Criteria 6</th>\n",
+       "      <th>Criteria 7</th>\n",
+       "      <th>Criteria 8a</th>\n",
+       "      <th>Criteria 8b</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Air Handling</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Cooling</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Drying</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Heating</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Material Handling</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Power Generation</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.75</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  equipment_group_name  Criteria 1  Criteria 2  Criteria 3  Criteria 4  \\\n",
+       "0         Air Handling        0.50        0.50        0.50        0.50   \n",
+       "1              Cooling        1.00        0.00        1.00        0.00   \n",
+       "2               Drying        0.00        1.00        0.00        1.00   \n",
+       "3              Heating        0.75        0.25        0.75        0.25   \n",
+       "4    Material Handling        0.50        0.50        0.50        0.50   \n",
+       "5     Power Generation        0.25        0.75        0.25        0.75   \n",
+       "\n",
+       "   Criteria 5  Criteria 6  Criteria 7  Criteria 8a  Criteria 8b  \n",
+       "0        0.50        0.50        0.50         0.50         0.50  \n",
+       "1        1.00        0.00        1.00         1.00         0.00  \n",
+       "2        0.00        1.00        0.00         0.00         1.00  \n",
+       "3        0.75        0.25        0.75         0.75         0.25  \n",
+       "4        0.50        0.50        0.50         0.50         0.50  \n",
+       "5        0.25        0.75        0.25         0.25         0.75  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "df_agg_scores"
    ]
   },
   {
