Update bot.py file with call to run chat from terminal, the playground include examples of langchain building the questions logic at graph level in ..htl_tree_defaul.ipynb and node level on ...htl_ree_custom.ipynb

--- a/playground/local_rag_experiments.ipynb
+++ b/playground/local_rag_experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,16 +48,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "load_dotenv()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +108,7 @@
        "'Heating, Cooling, Power Generation, Material Handling, Air Handling, Drying'"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +130,7 @@
        "\"equipment_group_name                             equipments\\n             Heating        ['Boiler', 'Furnace', 'Heater']\\n             Cooling                  ['Chiller', 'Cooler']\\n    Power Generation               ['Generator', 'Turbine']\\n   Material Handling ['Conveyor', 'Mixer', 'Pump', 'Valve']\\n        Air Handling                      ['Fan', 'Blower']\\n              Drying                              ['Dryer']\""
       ]
      },
-     "execution_count": 105,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,30 +180,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(output_format_instructions)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "equipment_group_name='Cooling' new_equipment='Main Cooler' classification_score=80\n"
+      "equipment_group_name                             equipments\n",
+      "             Heating        ['Boiler', 'Furnace', 'Heater']\n",
+      "             Cooling                  ['Chiller', 'Cooler']\n",
+      "    Power Generation               ['Generator', 'Turbine']\n",
+      "   Material Handling ['Conveyor', 'Mixer', 'Pump', 'Valve']\n",
+      "        Air Handling                      ['Fan', 'Blower']\n",
+      "              Drying                              ['Dryer']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(str_map_equipment_groups)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>equipment_group_name</th>\n",
+       "      <th>Criteria 1</th>\n",
+       "      <th>Criteria 2</th>\n",
+       "      <th>Criteria 3</th>\n",
+       "      <th>Criteria 4</th>\n",
+       "      <th>Criteria 5</th>\n",
+       "      <th>Criteria 6</th>\n",
+       "      <th>Criteria 7</th>\n",
+       "      <th>Criteria 8a</th>\n",
+       "      <th>Criteria 8b</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Air Handling</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Cooling</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Drying</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Heating</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Material Handling</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Power Generation</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.75</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  equipment_group_name  Criteria 1  Criteria 2  Criteria 3  Criteria 4  \\\n",
+       "0         Air Handling        0.50        0.50        0.50        0.50   \n",
+       "1              Cooling        1.00        0.00        1.00        0.00   \n",
+       "2               Drying        0.00        1.00        0.00        1.00   \n",
+       "3              Heating        0.75        0.25        0.75        0.25   \n",
+       "4    Material Handling        0.50        0.50        0.50        0.50   \n",
+       "5     Power Generation        0.25        0.75        0.25        0.75   \n",
+       "\n",
+       "   Criteria 5  Criteria 6  Criteria 7  Criteria 8a  Criteria 8b  \n",
+       "0        0.50        0.50        0.50         0.50         0.50  \n",
+       "1        1.00        0.00        1.00         1.00         0.00  \n",
+       "2        0.00        1.00        0.00         0.00         1.00  \n",
+       "3        0.75        0.25        0.75         0.75         0.25  \n",
+       "4        0.50        0.50        0.50         0.50         0.50  \n",
+       "5        0.25        0.75        0.25         0.25         0.75  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_equipment_group_probs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "equipment_group_name='Cooling' new_equipment='Freezer' classification_score=0\n"
      ]
     }
    ],
    "source": [
     "chain = prompt | llm | output_parser\n",
     "\n",
-    "user_equipment = 'Main Cooler' \n",
+    "user_equipment = 'Freezer' \n",
     "# Test cases  on the table :  Chiller, Cooler, Conveyor, Bolier \n",
     "# Test cases outside the table: Bolier, Boliers,  Main Cooler, Freezer,\n",
     "\n",
@@ -206,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -270,12 +443,13 @@
        "1         1.0         0.0         1.0          1.0          0.0    Main Cooler  "
       ]
      },
-     "execution_count": 118,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "df_equipment_probs = df_equipment_group_probs.copy()\n",
     "equipment_group_name = result.equipment_group_name\n",
     "df_equipment_probs = df_equipment_probs.loc[df_equipment_probs['equipment_group_name']==equipment_group_name]\n",
@@ -285,18 +459,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "equipment_group_name='Cooling' new_equipment='Main Cooler' classification_score=80\n"
-     ]
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "value_8b = df_equipment_probs['Criteria 8a'].values[0]\n",
+    "value_8b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\npartial_prompt =  prompt.partial(map_equipment_groups=str_map_equipment_groups,\\n                                 output_format_instructions=output_format_instructions,\\n                                equipment_group_categories=str_equipment_group_categories,\\n                                 )\\n\\nchain = partial_prompt | llm | output_parser\\n\\nuser_equipment = 'Main Cooler' \\n# Test cases  on the table :  Chiller, Cooler, Conveyor, Bolier \\n# Test cases outside the table: Bolier, Boliers,  Main Cooler, Freezer,\\n\\nresult = chain.invoke({'user_equipment': user_equipment})\\nprint(result)\\n\""
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
     "partial_prompt =  prompt.partial(map_equipment_groups=str_map_equipment_groups,\n",
     "                                 output_format_instructions=output_format_instructions,\n",
     "                                equipment_group_categories=str_equipment_group_categories,\n",
@@ -309,7 +508,8 @@
     "# Test cases outside the table: Bolier, Boliers,  Main Cooler, Freezer,\n",
     "\n",
     "result = chain.invoke({'user_equipment': user_equipment})\n",
-    "print(result)"
+    "print(result)\n",
+    "\"\"\""
    ]
   },
   {
