Adapt code for async execution, bot_as.py can be executed as a corroutine, when bot.py works in sync way. The goal with async is to faciliate code execution from UI after code interruption to add human feedback

--- a/playground/bot_flows_experiments_hitl_tree_custom.ipynb
+++ b/playground/bot_flows_experiments_hitl_tree_custom.ipynb
@@ -324,7 +324,7 @@
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x1e010e5fe10>"
+       "<langgraph.graph.state.StateGraph at 0x1aeb00d7050>"
       ]
      },
      "execution_count": 8,
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -380,6 +380,171 @@
     "\n",
     "# View\n",
     "display(Image(graph.get_graph(xray=1).draw_mermaid_png()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Non interactive run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----------Node get human equipment-------------------\n",
+      "-----------Node RAG-------------------\n",
+      "RAG for input: Coler\n",
+      "Equipment category analysis:  equipment_group_name='Cooling' new_equipment='Coler' classification_score=80\n",
+      "RAG Output:   equipment_group_name  Criteria 1  Criteria 2  Criteria 3  Criteria 4  \\\n",
+      "1              Cooling         1.0         0.0         1.0         0.0   \n",
+      "\n",
+      "   Criteria 5  Criteria 6  Criteria 7  Criteria 8a  Criteria 8b equipment_name  \n",
+      "1         1.0         0.0         1.0          1.0          0.0          Coler  \n",
+      "encoding str to pandas\n",
+      "---Step 3---\n",
+      "-----------Node question-------------------\n",
+      "Question question_1: 1. The issue is related to IT protocol 00x1?\n",
+      "---node human_feedback---\n",
+      "Please answer the quesiton with yes/no answer\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "config = {\"configurable\": {\"thread_id\": \"1\"}}\n",
+    "initial_input = {\"stage\":0, \"equipment\":\"Coler\"}\n",
+    "result = graph.invoke(initial_input, config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'stage': 3,\n",
+       " 'equipment': 'Coler',\n",
+       " 'ai_message': '1. The issue is related to IT protocol 00x1?',\n",
+       " 'criteria_8a_status': True,\n",
+       " 'criteria_8b_status': False,\n",
+       " 'df_output': 'equipment_group_name  Criteria_1  Criteria_2  Criteria_3  Criteria_4  Criteria_5  Criteria_6  Criteria_7  Criteria_8a  Criteria_8b equipment_name\\n             Cooling         1.0         0.0         1.0         0.0         1.0         0.0         1.0          1.0          0.0          Coler',\n",
+       " 'current_question_id': 'question_1'}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('node_human_feedback',)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "graph.get_state(config).next"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----------Node question-------------------\n",
+      "Question question_2: 2. The system reported temperature over 15 Celcius degree?\n",
+      "---node human_feedback---\n",
+      "Please answer the quesiton with yes/no answer\n"
+     ]
+    }
+   ],
+   "source": [
+    "graph.update_state(config, {\"human_message\": 'no'}, as_node=\"node_human_feedback\")\n",
+    "result = graph.invoke(None, config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----------Node question-------------------\n",
+      "Question question_end: Questionary is done\n",
+      "---node human_feedback---\n",
+      "Please answer the quesiton with yes/no answer\n",
+      "---Step 6---\n",
+      "decoding str to pandas\n",
+      "-----------Node output-------------------\n",
+      "encoding str to pandas\n",
+      "  equipment_group_name  Criteria_1  Criteria_2  Criteria_3  Criteria_4  \\\n",
+      "0              Cooling         1.0         0.0         1.0         0.0   \n",
+      "\n",
+      "   Criteria_5  Criteria_6  Criteria_7  Criteria_8a  Criteria_8b equipment_name  \n",
+      "0         1.0         0.0         1.0         True        False          Coler  \n"
+     ]
+    }
+   ],
+   "source": [
+    "graph.update_state(config, {\"human_message\": 'no'}, as_node=\"node_human_feedback\")\n",
+    "result = graph.invoke(None, config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "graph.get_state(config).next"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Interactive run"
    ]
   },
   {
